Some updates and adding launa

--- a/nomad/dashboard/index.html
+++ b/nomad/dashboard/index.html
@@ -25,7 +25,7 @@
       <a
         class="button is-light is-large"
         style="display: block; height: auto; max-width: 15rem; margin: 1rem auto;"
-        href="https://vault.service.consul:8200/">
+        href="https://vault.service.consul:8200/ui/vault/auth?with=token">
         <img
           src="https://www.datocms-assets.com/2885/1620159869-brandvaultprimaryattributedcolor.svg"
           style="display: block; height: 3rem"
