Enable userpass and approle

--- a/nomad/dashboard/index.html
+++ b/nomad/dashboard/index.html
@@ -16,7 +16,7 @@
       <a
         class="button is-light is-large"
         style="display: block; height: auto; max-width: 15rem; margin: 1rem auto;"
-        href="https://nomad.service.consul:4646/">
+        href="https://nomad.cluster.cgamesplay.com/">
         <img
           src="https://www.datocms-assets.com/2885/1620155098-brandhcnomadprimaryattributedcolor.svg"
           style="display: block; height: 3rem"
@@ -25,12 +25,13 @@
       <a
         class="button is-light is-large"
         style="display: block; height: auto; max-width: 15rem; margin: 1rem auto;"
-        href="https://vault.service.consul:8200/ui/vault/auth?with=token">
+        href="https://vault.cluster.cgamesplay.com/ui/vault/auth?with=userpass">
         <img
           src="https://www.datocms-assets.com/2885/1620159869-brandvaultprimaryattributedcolor.svg"
           style="display: block; height: 3rem"
           alt="Vault" />
       </a>
+      <hr />
       <a
         class="button is-light is-large"
         style="display: block; height: auto; max-width: 15rem; margin: 1rem auto;"
